# cloudflare-dyndns-updater

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE  README.md  dockerfile  main.py  pyproject.toml  ty.toml
.github/workflows/: build_docker.yml
app/: main.py
app/config/: settings-template.yaml
src/: cloudflare_service.py  ip_service.py  main.py  settings.py
src/cloudflare_dyndns_updater/: main.py  settings.py
src/cloudflare_dyndns_updater/services/: __init__.py  cloudflare.py
src/services/: ip.py
